添加 Servlet 自启动